--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=test
 
-server.port=8888
+server.port=8880
 
 #MySql
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb6
+spring.datasource.url=jdbc:mysql://localhost:3306/opticoredb
 spring.datasource.username=root
 spring.datasource.password=12345
 
