--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=test
 
-server.port=8888
+server.port=8880
 
 #MySql
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb6
+spring.datasource.url=jdbc:mysql://localhost:3306/opticoredb?serverTimezone=Asia/Seoul&useSSL=false&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=12345
 
@@ -13,4 +13,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 jwt.secret=myScretKey0000fdafadsdfdsafdasffsafsafasfdfdfsdafafs
-jwt.expiration=180000
+#3hour
+jwt.expiration=10800000
