--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,5 +29,35 @@ spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oau
 spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
 spring.security.oauth2.client.provider.naver.user-name-attribute=response
 
+
+
+# ==============================
+# OAuth2 Google ??
+# ==============================
+spring.security.oauth2.client.registration.google.client-id=648903361809-do1h52nn0d6is8j80e9u2aa6qob0bb05.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-name=Google
+spring.security.oauth2.client.registration.google.scope=email,profile
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
+# ==============================
+# OAuth2 Google ??
+# ==============================
+
+
 gemini.api.key=AIzaSyCMmImt7y7GdlMpDQA1R2KdU450C1K95Tc
 gemini.api.url=https://generativelanguage.googleapis.com/v1/models/gemini-2.5-flash:generateContent
+
+
+# AWS S3 ??
+cloud.aws.credentials.access-key=AKIAVUA4ECMUE3PDNX6J
+cloud.aws.credentials.secret-key=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
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.s3.bucket=team2-free-project-s3-bucket
+cloud.aws.stack.auto=false
