네이버, 구글 로그인

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,7 @@ spring.security.oauth2.client.provider.naver.user-name-attribute=response
 spring.security.oauth2.client.registration.google.client-id=648903361809-do1h52nn0d6is8j80e9u2aa6qob0bb05.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.client-name=Google
-spring.security.oauth2.client.registration.google.scope=email,profile
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 
@@ -45,7 +45,6 @@ spring.security.oauth2.client.provider.google.authorization-uri=https://accounts
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
-
 # ==============================
 # OAuth2 Google ??
 # ==============================
@@ -61,3 +60,6 @@ cloud.aws.credentials.secret-key=XiWEv5ZPWEySqj3nIFRH/hiROZDwQvVB8WaNZYF9
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.s3.bucket=team2-free-project-s3-bucket
 cloud.aws.stack.auto=false
+
+
+spring.main.allow-bean-definition-overriding=true
