--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=test
 server.port=8880
 
 #MySql
-spring.datasource.url=jdbc:mysql://localhost:3306/opticoredb
-spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.url=jdbc:mysql://team2-free-project-mysql-db.crwceg2wuy6s.ap-northeast-2.rds.amazonaws.com/opticoredb
+spring.datasource.username=admin
+spring.datasource.password=12345678
 
 #JPA
 spring.jpa.hibernate.ddl-auto=update
