AI 호환성 체크 (mistral ai)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,6 +53,9 @@ spring.security.oauth2.client.provider.google.user-name-attribute=sub
 gemini.api.key=AIzaSyCMmImt7y7GdlMpDQA1R2KdU450C1K95Tc
 gemini.api.url=https://generativelanguage.googleapis.com/v1/models/gemini-2.5-flash:generateContent
 
+mistral.api.key=VzgrFHbSqvUkAnEqH4dJMhFGkdRlqpWz
+mistral.api.url=https://api.mistral.ai/v1/chat/completions
+
 
 # AWS S3 ??
 cloud.aws.credentials.access-key=AKIAVUA4ECMUE3PDNX6J
