정보게시판 글 자동 불러오기 기능 추가

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,12 @@ dependencies {
 
     // AWS S3 SDK
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.529'
+
+    // RSS Feed 파싱 (rome)
+    implementation 'com.rometools:rome:2.1.0'
+
+    // HTML 파싱 (jsoup)
+    implementation 'org.jsoup:jsoup:1.17.2'
 }
 
 tasks.named('test') {
