--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=test
 
+# ???? ??? ????(???) api ?? ??
+
 server.port=8880
 
 #MySql
 spring.datasource.url=jdbc:mysql://team2-free-project-mysql-db.crwceg2wuy6s.ap-northeast-2.rds.amazonaws.com/opticoredb
+# jdbc:mysql://team2-free-project-mysql-db.crwceg2wuy6s.ap-northeast-2.rds.amazonaws.com/opticoredb ???
+# jdbc:mysql://team2-free-project-mysql-db.cvssceog4iiz.ap-northeast-2.rds.amazonaws.com/obticoredb
 spring.datasource.username=admin
 spring.datasource.password=12345678
 
@@ -17,7 +21,9 @@ jwt.expiration=36000000
 
 # OAuth2 Naver ??
 spring.security.oauth2.client.registration.naver.client-id=392gF_LbESx8oMgl0yL1
+# hoccWFwVL4XyhvylTleJ
 spring.security.oauth2.client.registration.naver.client-secret=v_4bAPWYNm
+# n1VsE4BH8q
 spring.security.oauth2.client.registration.naver.client-name=Naver
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
@@ -35,7 +41,9 @@ spring.security.oauth2.client.provider.naver.user-name-attribute=response
 # OAuth2 Google ??
 # ==============================
 spring.security.oauth2.client.registration.google.client-id=648903361809-do1h52nn0d6is8j80e9u2aa6qob0bb05.apps.googleusercontent.com
+# 692006582031-nmpa92j1dlgr5fmc9allv3064c28pjkl.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
+# 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
 spring.security.oauth2.client.registration.google.client-name=Google
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
@@ -51,17 +59,25 @@ spring.security.oauth2.client.provider.google.user-name-attribute=sub
 
 
 gemini.api.key=AIzaSyCMmImt7y7GdlMpDQA1R2KdU450C1K95Tc
+# AIzaSyCIDAOa8kSi76zCKr9W3CD8JhpeJ39Fo0I
 gemini.api.url=https://generativelanguage.googleapis.com/v1/models/gemini-2.5-flash:generateContent
 
 mistral.api.key=VzgrFHbSqvUkAnEqH4dJMhFGkdRlqpWz
+# Yu4EUGr6obZfftdJP1RXYFDNaSoiQRcL
 mistral.api.url=https://api.mistral.ai/v1/chat/completions
 
 
 # AWS S3 ??
 cloud.aws.credentials.access-key=AKIAVUA4ECMUE3PDNX6J
+# AKIAVUA4ECMUE3PDNX6J
+# AKIA2XRZLJQBR2JS46UN
 cloud.aws.credentials.secret-key=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
+# XiWEv5ZPWEySqj3nIFRH/hiROZDwQvVB8WaNZYF9
+# AOfGbyuN22/cY40evoAbtb8jJVqnwcGpyg+OXDeZ
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.s3.bucket=team2-free-project-s3-bucket
+# team2-free-project-s3-bucket
+# team2-free-project-s3-bucket2
 cloud.aws.stack.auto=false
 
 
