--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,8 @@ dependencies {
 
     // HTML 파싱 (jsoup)
     implementation 'org.jsoup:jsoup:1.17.2'
+
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
