아이디 비밀번호 찾기

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,5 +64,15 @@ cloud.aws.region.static=ap-northeast-2
 cloud.aws.s3.bucket=team2-free-project-s3-bucket
 cloud.aws.stack.auto=false
 
+# ==============================
+# ?? SMTP
+# ==============================
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=wns10099@gmail.com
+spring.mail.password=arnenjjbysmednog
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 spring.main.allow-bean-definition-overriding=true
