--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -93,16 +93,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.main.allow-bean-definition-overriding=true
 
-# ==============================
-# ?? SMTP
-# ==============================
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=wns10099@gmail.com
-spring.mail.password=arnenjjbysmednog
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
+spring.web.resources.static-locations=classpath:/public/,classpath:/static/
+
+spring.mvc.view.prefix=/
+spring.mvc.view.suffix=.html
+spring.web.resources.add-mappings=true
