--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=test
 server.port=8880
 
 #MySql
-spring.datasource.url=jdbc:mysql://team2-free-project-mysql-db.cvssceog4iiz.ap-northeast-2.rds.amazonaws.com/obticoredb
+spring.datasource.url=jdbc:mysql://team2-free-project-mysql-db.cvssceog4iiz.ap-northeast-2.rds.amazonaws.com/opticoredb
 # jdbc:mysql://team2-free-project-mysql-db.crwceg2wuy6s.ap-northeast-2.rds.amazonaws.com/opticoredb ???
 # jdbc:mysql://team2-free-project-mysql-db.cvssceog4iiz.ap-northeast-2.rds.amazonaws.com/opticoredb
 spring.datasource.username=admin
