--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.security.oauth2.client.registration.naver.client-secret=v_4bAPWYNm
 # n1VsE4BH8q
 spring.security.oauth2.client.registration.naver.client-name=Naver
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.redirect-uri=http://ec2-15-165-127-242.ap-northeast-2.compute.amazonaws.com:8880/login/oauth2/code/naver
 spring.security.oauth2.client.registration.naver.scope=name,email
 
 # OAuth2 Naver Provider ??
@@ -51,7 +51,7 @@ spring.security.oauth2.client.registration.google.client-secret=GOCSPX-GSqG6L077
 # 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
 spring.security.oauth2.client.registration.google.client-name=Google
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
-spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.google.redirect-uri=http://ec2-15-165-127-242.ap-northeast-2.compute.amazonaws.com:8880/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
